client/src/App.scss
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700&display=swap');

@import-normalize;

html {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

$color-background: #f5f5f5;
$color-dark: #161616;
$size-small: 40px;

body {
  background-color: $color-background;
  font-family: 'Open Sans', sans-serif;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  text-decoration: none;
  font-weight: 600;
  color: black;
}

.slide-appear {
  opacity: 0;
  transform: scale(0.97) translateY(5px);
  z-index: 1;
}
.slide-appear.slide-appear-active {
  opacity: 1;
  transform: scale(1) translateY(0);
  transition: opacity 300ms linear 100ms, transform 300ms ease-in-out 100ms;
}

.slide-exit {
  opacity: 1;
  transform: scale(1) translateY(0);
}
.slide-exit.slide-exit-active {
  opacity: 0;
  transform: scale(0.97) translateY(5px);
  transition: opacity 150ms linear, transform 150ms ease-out;
}
.slide-exit-done {
  opacity: 0;
}

.order-details-appear {
  transform: translateY(100%);
}
.order-details-appear-done {
  transform: translateY(0%);
  transition: transform 300ms ease-out;
}

